netcfg (0.36) UNRELEASED; urgency=low

  * Bartosz Fenski
    - Updated Polish (pl) translation.
  * Steinar H. Gunderson 
    - Updated Norwegian translation (nb.po).
  * Philippe Batailler
    - French translation improvements.
  * Christian Perrier
    - Corrected typo in templates (s/If must/It must) and updated
      all translations

 -- Steinar H. Gunderson <sgunderson@bigfoot.com>  Fri, 19 Dec 2003 19:42:42 +0100

netcfg (0.35) unstable; urgency=low

  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Kęstutis Biliūnas
    - Updated Lithuanian translation
  * Christian Perrier
    - Debconf templates polishing (Closes: #223762)
  * Joey Hess
    - English fixes.
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Oliver Elphick
    - More template polishing.
  * Verok Istvan
    - Updated Hungarian translation
  * Claus Hindsgaul
    - Updated Danish translation.
  * Konstantinos Margaritis
    - Updated Greek translation (el.po)
  * Giuseppe Sacco
    - add italian translation by Filippo Giunchedi
  * Gaudenz Steinlin
    - write to prebaseconfig.d/40netcfg in netcfg
  * Alwin Meschede
    - Updated German translation (de.po)
  * Miroslav Kure
    - Updated Czech translation (cs.po)
  * Philippe Batailler
    - Updated French translation (fr.po)

 -- Gaudenz Steinlin <gaudenz@soziologie.ch>  Wed, 17 Dec 2003 01:11:31 +0100

netcfg (0.34) unstable; urgency=low

  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Verok Istvan
    - Initial Hungarian translation
  * Denis Barbier
    - Unfuzzy French translation
  * Gaudenz Steinlin
    - add new combined dhcp and static netcfg
      (udeb netcfg)
    - implement joey's dhcp idea
      (wait 10s and then ask if we should try 
       longer)
    - move common code to netcfg-common.c
    - improve state machines

 -- Gaudenz Steinlin <gaudenz@soziologie.ch>  Thu, 11 Dec 2003 12:08:48 +0100