@@ -9,6 +9,8 @@ netcfg (0.36) UNRELEASED; urgency=low
   * Christian Perrier
     - Corrected typo in templates (s/If must/It must) and updated
       all translations
+  * Thiemo Seufer
+    - Fix function prototypes. Improve Makefile.
 
  -- Steinar H. Gunderson <sgunderson@bigfoot.com>  Fri, 19 Dec 2003 19:42:42 +0100
 
